# systemchord

./: .gitignore  Cargo.toml  LICENSE  README.md  RecognizedKeys
src/: chord.rs  cli.rs  config.rs  exec.rs  key.rs  key_names.rs  main.rs
src/backend/: evdev.rs  linux.rs  mod.rs
src/config/: configured_key.rs  mod.rs  structs.rs
