[package]
name = "systemchord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
toml = "0.8.13"
directories = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
crossbeam-channel = "0.5.13"
cfg-if = "1.0.0"


[target.'cfg(unix)'.dependencies]
evdev = "0.12.2"